[package]
name = "the-other-tui-markdown"
version = "0.1.0"
edition = "2024"
description = "Convert Markdown to ratatui Text with configurable theming and per-element rendering"
license = "MIT"

[dependencies]
pulldown-cmark = { version = "0.13", default-features = false }
ratatui-core = "0.1"
unicode-width = "0.2"

[dev-dependencies]
ratatui = "0.30"
crossterm = "0.29"
